# crossgrep

./: .gitignore  Cargo.toml  README.md  flake.nix  requirements.txt
crossgrep/: Cargo.toml
crossgrep-sys/: Cargo.toml
crossgrep/src/: chunker.rs  cli.rs  extractor.rs  main.rs  model.rs
scripts/: convert_clip_to_onnx.py
softgrep/: Cargo.toml
softgrep-cli/: Cargo.toml
softgrep-cli/src/: chunker.rs  cli.rs  extractor.rs  main.rs  model.rs
softgrep-languages/: Cargo.toml
softgrep-sys/: Cargo.toml  build.rs
src/: chunker.rs  cli.rs  extractor.rs  main.rs  model.rs
