[package]
name = "crossgrep"
version = "2.5.0-pre"
authors = ["Stephen Krider <skrider@berkeley.edu>"]
edition = "2018"

[dependencies]
anyhow = "1.0.79"
bump_alloc = "0.1.0"
clap = { version = "4.4.16", features = [ "std", "color", "suggestions", "cargo" ] }
crossbeam = "0.8.4"
ignore = "0.4.22"
itertools = "0.12.0"
rayon = "1.8.0"
serde = { version = "1.0.195", features = [ "derive" ] }
serde_json = "1.0.111"
strum = "0.25"
strum_macros = "0.25"
tokenizers = { version = "0.15.1", features = [ "http" ] }
tree-sitter = "0.20.10"
crossgrep-sys = { path = "../crossgrep-sys" }
ort = "2.0.0-alpha.4"

[dev-dependencies]
trycmd = "0.14.20"
