[package]
name = "softgrep-languages"
version = "2.5.0-pre"
authors = ["Stephen Krider <skrider@berkeley.edu>"]
edition = "2018"

[dependencies]
anyhow = "1.0.79"
strum = "0.25"
strum_macros = "0.25"
tree-sitter = "0.20.10"

[build-dependencies]
cc = { version = "1.0.84", features = [ "parallel" ] }

